src/App.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap");
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
    overflow-y: hidden
}

html {
  /* this makes sure the padding and the border is included in the box sizing */
  box-sizing: border-box;
}

body {
  font-family: "Inter", sans-serif;
  background-color: #323e7a;
}

.icon {
  font-size: 29px;
  font-weight: bold;
}

.nav {
  background-color: #323e7a;
  border: #fff !important;
  margin-top: 10px;
}
.navbrand {
  font-weight: 700;
  font-size: 22px;
  margin-left: 30px;
  letter-spacing: 1px;
}
.navtxt {
  font-weight: 400;
  font-size: 18px;
  margin-right: 30px;
  letter-spacing: 1px;
}

.container {
  padding-right: 0;
  padding-left: 0;
  width: 100%;
}

article {
  background-color: #2030c7a6;
}

.profile {
  border-radius: 50%;
  border-color: none !important;
  width: 110px;
  height: 110px;
  background: transparent;
  background-color: transparent;
  object-fit: cover;
}

.tweet-list {
  overflow: scroll;
  padding: 20px;
  border-radius: 10px;
  background: linear-gradient(110deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
}


.app {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  /* margin-left: 2%;
  margin-right: 2%; */
  height: 85vh;
}

.main-row {
  margin-right:0;
}

.pages-col {
  height: 85vh;
  overflow-y: scroll;
}

.share {
  height: 85vh;
  overflow-y: scroll;
  padding: 20px;
  border-radius: 10px;
  background: linear-gradient(110deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
  display: flex;
  width: 90vw;
  flex-wrap: wrap;
  align-items: start;
}

.delete-tweet {
  position: absolute;
  left:95.5%;
  top: 6px;
  color:#ff0015b2;
  font-size: 20px;
  font-weight: bold;
}

.show-text {
  position: absolute;
  left:91.5%;
  top: 6px;
  font-size: 20px;
  font-weight: bold;
}

.no-padding {
  padding-top: 0;
}

.tweet-div {
  margin:0;
  padding:0;
}

blockquote.twitter-tweet {
  display: inline-block;
  /* font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif; */
  font-size: 12px;
  font-weight: bold;
  line-height: 16px;
  border: 5px solid rgba(28, 26, 61, 0.459);
  color: white;
  border-radius: 5px;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
  margin: 10px 5px;
  padding: 16px 16px 16px 16px;
  max-width: 468px;
  background-color: rgb(20, 133, 226);
  width: 100%;
}

blockquote.twitter-tweet p {
  font-size: 16px;
  font-weight: 500;
  line-height: 20px;
}

blockquote.twitter-tweet a {
  color: inherit;
  font-weight: normal;
  text-decoration: none;
  outline: 0 none;
}

blockquote.twitter-tweet a:hover,
blockquote.twitter-tweet a:focus {
  text-decoration: underline;
}

.folder-list {
  overflow: scroll;
  height: 100%;
  border-radius: 10px;
}

.input-list {
  overflow: scroll;
  height: 100%;
}

.hidden {
  display: none;
}

.Center {
  height: 40vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.center-fab {
  top: -10vh;
  height: 30vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.center-spinner {
  margin: auto
}

.sharing {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.share-container {
  position: absolute;
  left: 93%;
  top: 1px;
}

.url-container {
  position: absolute;
  left: 65%;
  top: 1px;
}

.url-input {
  font-weight: 400;
  outline: none !important;
  border-radius: 8px !important;
  color: #f9f9f9;
  padding: 3px;
  top: 12px;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  background: white;
  background: linear-gradient(
    to right bottom,
    rgba(255, 255, 255, 0.1),
    rgba(255, 255, 255, 0.06)
  );
  border-top: 2px solid rgba(255, 255, 255, 0.5);
  border-left: 2px solid rgba(255, 255, 255, 0.5);
  border-right: 2px solid rgba(255, 255, 255, 0.5);
  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
  background-clip: padding-box;
  border-radius: 10px !important;
  z-index: 4;
  backdrop-filter: blur(40px);
}

.share-label {
  color: white;
}

.share-icon {
  font-size: 35px;
  font-weight: bold;
}

blockquote {
  display: none;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.center-item {
  align-self: center;
}

.folder {
  flex-direction: row;
}

.folderName {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-weight: 500;
  font-size: 20px;
  color: white;
  letter-spacing: 1px;
  font-weight: 700;
  font-size: 32px;
  letter-spacing: 2px;
}

.center-home {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 0 auto;
}

.fab {
  position: fixed;
  bottom: 50px;
  right: 50px;
  border-radius: 10px;
  background: linear-gradient(110deg, rgba(187, 20, 226), rgba(21, 32, 227));
  display: flex;
  justify-content: center;
  align-items: center;
  border-color: none;
  border: none;
  padding: 15px;
  padding-left: 40px;
  padding-right: 40px;
  color: #f9f9f9;
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 1px;
  z-index: 3;
}

.card-fab {
  border-radius: 10px;
  background: linear-gradient(110deg, rgba(187, 20, 226), rgba(21, 32, 227));
  display: flex;
  justify-content: center;
  align-items: center;
  border-color: none;
  border: none;
  padding: 15px;
  padding-left: 40px;
  padding-right: 40px;
  color: #f9f9f9;
  font-size: 18px;
  font-weight: 500;
  letter-spacing: 1px;
  z-index: 3;
}

.fab:hover {
  color: #f9f9f9;
}

.icon {
  font-size: 25px;
  color: #fff;
  font-weight: bold;
}

.text-large {
  font-size: 25px;
}

.folder-text {
  font-size: 30px;
}

.account-title {
  margin: 0 auto;
}
/* ... */

